# iommi-startar

./: .editorconfig  LICENSE  pyproject.toml
mysite/myiommi/: admin.py  apps.py  models.py  urls.py  views.py
mysite/myiommi/migrations/: 0001_initial.py
mysite/mysite/: settings.py  urls.py
