[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
iommi = "^7.5.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-black = "^0.3.6"
flake8-docstrings = "^1.7.0"
mypy = "^1.11.2"
django-stubs = { extras = ["compatible-mypy"], version = "^5.1.0" }
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = "manage.py"
mypy_path = "mysite"

[tool.django-stubs]
django_settings_module = "mysite.settings"
